--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.67.0",
     "react-hot-toast": "^2.6.0",
+    "react-leaflet": "^5.0.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.30.2",
     "recharts": "^3.5.1",
