--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
@@ -23,7 +24,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.30.2",
     "recharts": "^3.5.1",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
